# person_rust_skeleton

./: .editorconfig  .env_example  .gitignore  Cargo.toml  README.md  diesel.toml
config/: example_prs.toml
migrations/2020-12-08-000001_initial/: down.sql  up.sql
migrations/2020-12-08-111733_create_people/: down.sql  up.sql
migrations/20201208000001_initial/: down.sql  up.sql
migrations/20201208000002_created_at/: down.sql  up.sql
migrations/20201211000001_updated_at/: down.sql  up.sql
migrations/20201211000002_updated_by/: down.sql  up.sql
src/: error.rs  lib.rs
src/config/: mod.rs
src/connections/: mod.rs  mysql.rs  pg.rs  sqlite.rs
src/models/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/mysql/: mod.rs
src/pg/: mod.rs
src/schema/: mod.rs
src/sqlite/: mod.rs
src/tests/: mod.rs
