[package]
name = "person_rust_skeleton"
version = "0.0.4"
authors = ["Michael Cummings <dragonrun1@gmail.com>"]
description = "Skeleton for common person database tables in MySQL, PostgreSQL, and SQLite."
edition = "2018"
keywords = ["database", "diesel", "MySQL", "PostgreSQL", "SQLite"]
categories = ["database", "database-implementations", "data-structures"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/Dragonrun1/person_rust_skeleton"
readme = "README.md"
repository = "https://github.com/Dragonrun1/person_rust_skeleton"

[dependencies]
cargo_metadata = "0.12.1"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.5", features = ["chrono", "serde_json"] }
diesel_derives = { version = "1.4.1" }
rand = "0.8.1"
serde = { version = "1.0.118", features=["derive"] }
serde_json = "1.0.60"
thiserror = "1.0.22"
toml = "0.5.7"
uuid64rs = { version = "0.0.11", path = "../Uuid64rs" }

[features]
created_at = []
default = ["diesel/chrono", "diesel/serde_json", "mysql", "updated_by"]
mysql = ["diesel/mysql", "diesel_derives/mysql"]
postgres = ["diesel/postgres", "diesel_derives/postgres"]
sqlite = ["diesel/sqlite", "diesel_derives/sqlite"]
updated_at = ["created_at"]
updated_by = ["created_at", "updated_at"]

